# fledge

./: .gitignore  CMakeLists.txt
C/common/: config_category.cpp  json_utils.cpp
C/plugins/storage/: CMakeLists.txt
C/plugins/storage/memory/: CMakeLists.txt  memorycontext.cpp  plugin.cpp
C/plugins/storage/memory/include/: memorycontext.h
C/plugins/storage/postgres/: plugin.cpp
C/services/common/: config_handler.cpp  management_api.cpp
C/services/north/: data_send.cpp  north.cpp  north_plugin.cpp
C/services/south/: ingest.cpp  south.cpp
C/services/south/include/: ingest.h
C/services/storage/: storage.cpp  storage_api.cpp
C/tasks/north/sending_process/: sending.cpp  sending_process.cpp
python/: requirements.txt
python/fledge/common/: configuration_manager.py  plugin_discovery.py
python/fledge/services/core/: server.py
python/fledge/services/core/api/: configuration.py
python/fledge/services/core/interest_registry/: change_callback.py
python/fledge/services/core/service_registry/: service_registry.py
